Create simple UI

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Please enter the console.</h1>
+    <h1>Rock Paper Scissors</h1>
+    <h2>Make your choice!</h2>
+    <h3>First to 3 wins.</h3>
+    <div class="button-container">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+    <div class="scores-container">
+        <div class="player-score">
+            <p>Player Score</p>
+            <div class="box"></div>
+        </div>
+        <div class="computer-score">
+            <p>Computer Score</p>
+            <div class="box"></div>
+        </div>
+    </div>
+    <h4>Results</h4>
+    <div class="result-container">
+        <div class="result-box"></div>
+    </div>
+    <div class="button-two"><button>Play again!</button></div>
     <script src="script.js"></script>
 </body>
+
 </html>
