Add event listener to buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h2>Make your choice!</h2>
     <h3>First to 3 wins.</h3>
     <div class="button-container">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button id="btnRock">Rock</button>
+        <button id="btnPaper">Paper</button>
+        <button id="btnScissors">Scissors</button>
     </div>
     <div class="scores-container">
         <div class="player-score">
