--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="result-container">
         <div class="result-box"></div>
     </div>
-    <div class="button-two"><button>Play again!</button></div>
+    <div class="button-two"><button id="playAgain">Play again!</button></div>
     <script src="script.js"></script>
 </body>
 
