Fill score boxes

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="scores-container">
         <div class="player-score">
             <p>Player Score</p>
-            <div class="box"></div>
+            <div class="box" id="playerScore">0</div>
         </div>
         <div class="computer-score">
             <p>Computer Score</p>
-            <div class="box"></div>
+            <div class="box" id="computerScore">0</div>
         </div>
     </div>
     <h4>Results</h4>
