--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class="gameEnd">
+        <h1>Game End</h1>
+         <h3 class="winner"></h3>
+         <div class="buttonEnd">Play Again</div>
+    </div>
     <h1>Rock Paper Scissors</h1>
     <h2>Make your choice!</h2>
     <h3>First to 5 wins.</h3>
@@ -31,7 +36,6 @@
     <div class="result-container">
         <div class="result-box"></div>
     </div>
-    <div class="button-two"><button id="playAgain">Play again!</button></div>
     <script src="script.js"></script>
 </body>
 
