Change text color on player win

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="gameEnd">
-        <h1>Game End</h1>
+        <h1 id="endText">Game End</h1>
          <h3 class="winner"></h3>
          <div class="buttonEnd">Play Again</div>
     </div>
