--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <h3>First to 5 wins.</h3>
     <div class="button-container">
         <button id="btnRock">Rock</button>
+        <img src="rock.svg" alt="rock" class="rock">
         <button id="btnPaper">Paper</button>
+        <img src="paper.webp" alt="paper" class="paper">
         <button id="btnScissors">Scissors</button>
+        <img src="scissors.svg" alt="scissors" class="scissors">
     </div>
     <div class="scores-container">
         <div class="player-score">
